--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongoose": "^8.7.0",
-    "nodeman": "^1.1.2",
-    "nodemon": "^3.1.7"
+    "nodeman": "^1.1.2"
   }
 }
