--- a/backend/src/.env
+++ b/backend/src/.env
@@ -1,2 +1,2 @@
-PORT=8000
-MONGO_URI = "mongodb+srv://Mr3amora400:400508900ohm@mernapp.nww7x.mongodb.net/?retryWrites=true&w=majority&appName=Mernapp"
+MONGO_URI="mongodb+srv://malakabdelaziz1556:malak@mernapp.yye1c.mongodb.net/"
+localhost:8000
