--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "busboy": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mogoose": "^0.0.1-security",
     "mongoose": "^8.7.0",
+    "multer": "^1.4.5-lts.1",
     "nodeman": "^1.1.2",
     "nodemon": "^3.1.7"
   }
