--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,15 +4,16 @@
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.6",
-    "@mui/material": "^6.1.6",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.1.8",
+    "@mui/material": "^6.1.8",
     "@mui/x-data-grid": "^7.22.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "contexts": "^0.0.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.454.0",
     "mui": "^0.0.1",
@@ -25,6 +26,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "sass": "^1.81.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
