--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.454.0",
     "mui": "^0.0.1",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
@@ -25,6 +26,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "recharts": "^2.13.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
