--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,13 @@
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
     "@mui/x-data-grid": "^7.22.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-dom": "^18.3.1",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.1",
     "contexts": "^0.0.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.454.0",
@@ -27,6 +30,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "sass": "^1.81.0",
+    "typescript": "^5.7.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
@@ -53,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.12"
   }
 }
