--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,9 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
-    "@mui/icons-material": "^6.1.8",
-    "@mui/material": "^6.1.8",
+    "@mui/icons-material": "^6.1.9",
+    "@mui/material": "^6.1.9",
+    "@mui/utils": "^6.1.9",
     "@mui/x-data-grid": "^7.22.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,6 +18,7 @@
     "formik": "^2.4.6",
     "lucide-react": "^0.454.0",
     "mui": "^0.0.1",
+    "postcss-loader": "^8.1.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
@@ -26,7 +28,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
-    "sass": "^1.81.0",
+    "resolve-url-loader": "^5.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
@@ -53,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.81.0"
   }
 }
