--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "recharts": "^2.13.3",
-    "sass": "^1.81.0",
+    "resolve-url-loader": "^5.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
@@ -59,6 +59,7 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.81.0"
+    "sass": "^1.81.0",
+    "sass-loader": "^16.0.3"
   }
 }
