--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,6 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "sass": "^1.81.0",
-    "typescript": "^5.7.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
@@ -59,6 +58,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18.3.12"
+    "@types/react": "^18.3.12",
+    "typescript": "^5.7.2"
   }
 }
