lots of tourist changes

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,36 +1,43 @@
 {
   "compilerOptions": {
     /* Basic Settings */
-    "target": "ES6",                                  /* Use modern JavaScript features (ES6). */
-    "module": "ESNext",                               /* Use modern ECMAScript module system. */
-    "jsx": "react-jsx",                               /* Enable JSX transformation for React. */
-    "moduleResolution": "node",                      /* Resolve modules in Node.js style. */
-    "esModuleInterop": true,                         /* Allow compatibility with CommonJS modules. */
-    "skipLibCheck": true,                            /* Skip type checking of library declaration files. */
-    "forceConsistentCasingInFileNames": true,        /* Ensure consistent import file casing. */
+    "target": "ES6",
+    "module": "ESNext",
+    "jsx": "react-jsx",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
 
     /* Strict Type-Checking Options */
-    "strict": true,                                  /* Enable strict mode for type-checking. */
-    "noImplicitAny": true,                           /* Prevent 'any' type by default. */
-    "strictNullChecks": true,                        /* Make null and undefined distinct types. */
-    "strictFunctionTypes": true,                     /* Check compatibility of function parameter types. */
-    "strictBindCallApply": true,                     /* Ensure bind, call, and apply methods are correctly used. */
-    "noImplicitThis": true,                          /* Disallow implicit 'any' type for 'this'. */
-    "alwaysStrict": true,                            /* Add 'use strict' directives in output. */
+    "strict": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
 
     /* Output Settings */
-    "outDir": "./dist",                              /* Output directory for compiled files. */
-    "sourceMap": true,                               /* Generate source maps for debugging. */
-    "removeComments": true,                          /* Remove comments from emitted JavaScript. */
+    "outDir": "./dist",
+    "sourceMap": true,
+    "removeComments": true,
 
     /* Type Definitions */
-    "typeRoots": ["./node_modules/@types"],          /* Specify folders for type definitions. */
+    "typeRoots": ["./node_modules/@types", "./src/types"],
 
     /* Additional Settings */
-    "resolveJsonModule": true,                       /* Allow importing .json files. */
-    "isolatedModules": true,                         /* Ensure each file is self-contained. */
-    "allowSyntheticDefaultImports": true            /* Allow default imports from modules without default exports. */
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "allowSyntheticDefaultImports": true,
+
+    /* Alias Configuration */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@/lib/*": ["src/lib/*"]
+    }
   },
-  "include": ["src"],                                /* Include the 'src' directory. */
-  "exclude": ["node_modules", "dist"]               /* Exclude unnecessary files and directories. */
+  "include": ["src", "node_modules/react-scripts/lib/react-app.d.ts"],
+  "exclude": ["dist"]
 }
