--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.1",
     "contexts": "^0.0.0",
+    "font-awesome": "^4.7.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.454.0",
     "mui": "^0.0.1",
