--- a/backend/src/.env
+++ b/backend/src/.env
@@ -1,2 +1,4 @@
 MONGO_URI = "mongodb+srv://hamdy:ACLGMGOW@cluster0.k992f.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 PORT = "8000"
+EMAIL_ADDRESS="watermelonglobe@gmail.com"
+EMAIL_PASSWORD="watermelon12345"
