--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "mogoose": "^0.0.1-security",
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "nodeman": "^1.1.2",
     "nodemon": "^3.1.7"
   }
