--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,8 @@
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-icons": "^5.3.0",
+    "react-notifications": "^1.7.4",
+    "react-notifications-component": "^4.0.1",
     "react-pro-sidebar": "^0.7.1",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.26.2",
