--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 /frontend/frontend/node_modules
+frontend/package-lock.json
+frontend/package.json
