--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "mui": "^0.0.1",
     "postcss-loader": "^8.1.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.6",
     "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
