--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,14 @@
     "@mui/material": "^6.1.9",
     "@mui/utils": "^6.1.9",
     "@mui/x-data-grid": "^7.22.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@stripe/stripe-js": "^5.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.1",
     "contexts": "^0.0.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.454.0",
@@ -26,12 +30,14 @@
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-icons": "^5.3.0",
+    "react-notifications-component": "^4.0.1",
     "react-pro-sidebar": "^0.7.1",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "recharts": "^2.13.3",
     "resolve-url-loader": "^5.0.0",
+    "tailwind-merge": "^2.5.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
