--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
     "nodeman": "^1.1.2",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "stripe": "^17.4.0"
   }
 }
