--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ yarn-error.log*
 /frontend/frontend/node_modules
 frontend/package-lock.json
 frontend/package.json
+frontend/package-lock.json
+frontend/package.json
