some guest page changes

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
     /* Basic Settings */
+    "noEmit": true,
     "target": "ES6",
     "module": "ESNext",
     "jsx": "react-jsx",
     "moduleResolution": "node",
     "esModuleInterop": true,
+    "allowImportingTsExtensions": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
 
