--- a/.gitignore
+++ b/.gitignore
@@ -1818,3 +1818,5 @@ backend/node_modules/sift/src/operations.ts
 backend/node_modules/sift/src/utils.ts
 backend/package-lock.json
 frontend/package-lock.json
+/backend/node_modules
+backend/node_modules/.package-lock.json
