--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8000/",
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
@@ -13,6 +13,8 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@stripe/react-stripe-js": "^3.0.0",
     "@stripe/stripe-js": "^5.2.0",
+    "@svgr/plugin-svgo": "^8.1.0",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -24,8 +26,8 @@
     "font-awesome": "^4.7.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.454.0",
-    "mui": "^0.0.1",
     "postcss": "^8.4.49",
+    "postcss-svgo": "^7.0.1",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^7.5.0",
@@ -39,6 +41,7 @@
     "recharts": "^2.14.1",
     "sass": "^1.81.0",
     "stripe": "^17.4.0",
+    "svgo": "^2.8.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.15",
     "web-vitals": "^2.1.4",
@@ -69,7 +72,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react": "^18.3.12",
     "typescript": "^4.9.5"
   }
