--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+dependencies
 /node_modules
 */node_modules
 /.pnp
@@ -23,6 +23,14 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Backend-specific ignores
+backend/logs/
+backend/node_modules/
+backend/.env
+backend/build/
+backend/dist/
+
 
 
 
