--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -22,3 +22,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Backend-specific ignores
+backend/logs/
+backend/node_modules/
+backend/.env
+backend/build/
+backend/dist/
+
