--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ frontend/package-lock.json
 frontend/package.json
 frontend/package-lock.json
 frontend/package.json
+frontend/package-lock.json
+frontend/package.json
