--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.8",
+    "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.8",
     "@mui/x-data-grid": "^7.22.2",
     "@radix-ui/react-slot": "^1.1.0",
