--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@mui/x-data-grid": "^7.22.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@stripe/react-stripe-js": "^3.0.0",
     "@stripe/stripe-js": "^5.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -22,8 +23,8 @@
     "formik": "^2.4.6",
     "lucide-react": "^0.454.0",
     "mui": "^0.0.1",
-    "postcss-loader": "^8.1.1",
     "postcss": "^8.4.49",
+    "postcss-loader": "^8.1.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-circular-progressbar": "^2.1.0",
@@ -36,10 +37,8 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
-    "recharts": "^2.13.3",
-    "resolve-url-loader": "^5.0.0",
-    "tailwind-merge": "^2.5.5",
     "recharts": "^2.14.1",
+    "resolve-url-loader": "^5.0.0",
     "sass": "^1.81.0",
     "stripe": "^17.4.0",
     "tailwind-merge": "^2.5.5",
@@ -72,9 +71,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.3.12",
     "sass": "^1.81.0",
     "sass-loader": "^16.0.3",
-    "@types/react": "^18.3.12",
     "typescript": "^4.9.5"
   }
 }
