--- a/.gitignore
+++ b/.gitignore
@@ -1388,3 +1388,5 @@ backend/node_modules/sift/src/operations.ts
 backend/node_modules/sift/src/utils.ts
 backend/package-lock.json
 backend/package.json
+frontend/package-lock.json
+frontend/package.json
