--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.8",
     "@mui/x-data-grid": "^7.22.2",
+    "@mui/x-date-pickers": "^7.23.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@stripe/react-stripe-js": "^3.0.0",
@@ -22,6 +23,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.1",
     "contexts": "^0.0.0",
+    "date-fns": "^2.29.3",
     "font-awesome": "^4.7.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.454.0",
