--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ yarn-debug.log*
 yarn-error.log*
 /backend/node_modules/
 /frontend/node_modules/
+/backend/package-lock.json
+/frontend/package-lock.json
