--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ yarn-error.log*
 /frontend/node_modules/
 /backend/package-lock.json
 /frontend/package-lock.json
+backend/package-lock.json
+frontend/package-lock.json
