--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ yarn-error.log*
 /frontend/package-lock.json
 backend/package-lock.json
 frontend/package-lock.json
+/frontend/frontend/node_modules
